added media queries

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
       </div>
 
       
-   <div class="col-md-6">
+   <div class="col-6 d-none d-md-block">
        <img src="images/Jabu-Mhlongo.jpg" alt="" class="img-fluid">
       </div>
       </div>
