--- a/work.html
+++ b/work.html
@@ -21,26 +21,43 @@
   <title>work page</title>
 </head>
 <body>
-  <div class="content-container container">
-      <div class="content">
-        <h1 class="mb-5"> Take a look at what I've been working on!</h1>
+  <h1 class="work-page-h1">Take a look at my recent projects!</h1>
+
+  <div class="work-page-container container">
+    <div class="row">
+      <div class="col-6"><img class="work-page-img" src="images/yogurt.jpg" alt="" class="img-fluid">
+        <h3 class="work-page-h3">
+          The Yogurt Recipes Project
+        </h3>
+        <p class="work-page-p">Built using HTML and CSS</p>
       </div>
-  </div>
 
-      <div class="row">
-        <div class="col-6">
-          <img src="images/yogurt.jpg" alt="" class="img-fluid">
-          <h3 class="text-center">Yogurt recipes project</h3>
-          <p class="text-center">Built with HTML and CSS</p>
-        </div>
+      <div class="col-6"><img class="work-page-img" src="images/sticky notes.jpeg" alt="" class="img-fluid">
+        <h3 class="work-page-h3">
+          The Sticky Notes Project
+        </h3>
+        <p class="work-page-p">Built using HTML,CSS and Javascript</p>
+      </div>
 
-        <div class="col-6">
-          <img src="images/sticky notes.jpeg" alt="" class="img-fluid">
-          <h3 class="text-center">Sticky Notes project</h3>
-          <p class="text-center">Built with HTML,CSS and Javascript</p>
-        </div>
+      <div class="col-6"><img class="work-page-img" src="images/skincare.jpg" alt="" class="img-fluid">
+        <h3 class="work-page-h3">
+          The Skincare Project
+        </h3>
+        <p class="work-page-p">Built using HTML and CSS</p>
+      </div>
+
+      <div class="col-6"><img class="work-page-img" src="images/weatherApp.jfif" alt="" class="img-fluid">
+        <h3 class="work-page-h3">
+          The Weather Project
+        </h3>
+        <p class="work-page-p">Built using HTML, CSS and Javascript</p>
       </div>
       
+      
+
+    </div>
+  </div>
+  
   
   
 </body>
