added contact content

--- a/contact.html
+++ b/contact.html
@@ -22,19 +22,26 @@
 </head>
 <body>
   <h1>Let's Get In Contact</h1>
-  <div class="content-container container">
-
-  <div class="email">
-    <h3>Email:</h3>
+  <div class="container">
+    <div class="contact-content"> <h3>Email:</h3>
       <a href="mailto:jabumhlongo07@gmail.com">jabumhlongo07@gmail.com</a>
-  </div>
+  
 
-  <div class="Instagram">
+  
     <h3>Instagram:</h3>
-    <a href="www.Istagram.com/Jabu-Mhlongo">@JabuMhloongoCodes</a>
+    <a href="www.Istagram.com/Jabu-Mhlongo">@JabuMhlongoCodes</a>
+  
+
+  
+    <h3>WhatsApp:</h3>
+    <a href="www.whatsapp.com/0730734362">0730734362</a>
+  
+
+  
+    <h3>Facebook:</h3>
+    <a href="www.facebook.com/Jabu-Mhlongo">JabuMhlongo</a>
   </div>
-
-
+  
   </div>
   
   
