--- a/work.html
+++ b/work.html
@@ -23,7 +23,15 @@
 <body>
   <div class="content-container container">
       <div class="content">
-        <h1 class="mb-5">Hi I am Jabu Mhlongo</h1>
+        <h1 class="mb-5"> Take a look at what I've been working on!</h1>
+      </div>
+
+      <div class="row">
+        <div class="col-6">
+          <img src="images/yogurt.jpg" alt="" class="img-fluid">
+          <h3>Yogurt recipes project</h3>
+        </div>
+
       </div>
 
 
