--- a/work.html
+++ b/work.html
@@ -29,7 +29,8 @@
       <div class="row">
         <div class="col-6">
           <img src="images/yogurt.jpg" alt="" class="img-fluid">
-          <h3>Yogurt recipes project</h3>
+          <h3 class="text-center">Yogurt recipes project</h3>
+          <p class="text-center">Built with HTLM and CSS</p>
         </div>
 
       </div>
