--- a/about.html
+++ b/about.html
@@ -21,25 +21,21 @@
   <title>About Page</title>
 </head>
 <body>
-  <div class="content-container container">
+
+  <h1> About</h1>
+  <h3>Frontend Develover from South Africa</h3>
+  <div class=" about-container container">
     <div class="row">
-      <div class="col-md-6">
-        <div class="content">
-  <h1 class="mb-4">Hi I am Jabu Mhlongo </h1>
-  <h2 class="mb-4">A frontend Dveloper from South Africa</h2>
-  <p class="mb-5">Coding is awesome and so is SheCodes Foundation a platform that gives you an opprtunity to learn
-    a learn skill that is in demand in the current job market. I love that it gives women an opportunity to
-    break into teach and fill the current gap. I love that it caters for women in many countries all for free
-  </p>
-
-  <a href="" class="btn-branding">view projects</a>
+      <div col-6>
+        <p>Coding is awesome and so is SheCodes Foundation a platform that gives you an opprtunity to learn
+          a learn skill that is in demand in the current job market. I love that it gives women an opportunity to
+          break into teach and fill the current gap. I love that it caters for women in many countries all for free</p>
       </div>
 
-      
-   <div class="col-6 d-none d-md-block">
-       <img src="images/Jabu-Mhlongo.jpg" alt="" class="img-fluid">
+      <div col-6>
+        <img src="images/Jabu-Mhlongo.jpg" alt="Jabu Mhlongo" class="img-fluid">
       </div>
-      </div>
+
     </div>
   </div>
   
