--- a/index.html
+++ b/index.html
@@ -23,6 +23,20 @@
 </head>
 <body>
 
+
+    <div>
+      <nav class="nav">
+        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+        <a class="nav-link" href="about.html">About</a>
+        <a class="nav-link" href="work.html">Work</a>
+        <a class="nav-link" href="contact.html">Contact</a>
+    </nav>
+    </div>
+    
+
+    
+  
+
   <div class="hero">
   <p>Hello I am</p>
   <h1>Jabu Mhlongo</h1>
@@ -92,6 +106,18 @@
     </div>
     </div>
   </div>
-  </div> 
+  </div>
+
+  <footer>
+    <h3 class="work-inquiry">Work Inquiry</h3>
+    <form>
+      <input class="message-inquiry" type="text" placeholder="Message" name="message-inquiry">
+      <input type="submit">
+
+    </form>
+  </footer>
+  
+  
+
 </body>
 </html>
