added footer content

--- a/index.html
+++ b/index.html
@@ -109,12 +109,11 @@
   </div>
 
   <footer>
-    <h3 class="work-inquiry">Work Inquiry</h3>
-    <form>
-      <input class="message-inquiry" type="text" placeholder="Message" name="message-inquiry">
-      <input type="submit">
-
-    </form>
+    <h2 class="work-inquiry">Work Inquiry</h2>
+    <form action="contact.html">
+      <input type="submit" value="Go to Contact page">
+  </form>
+  
   </footer>
   
   
