added nav to all the pages

--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,17 @@
   <title>Contact page</title>
 </head>
 <body>
+
+  <div>
+    <nav class="nav">
+      <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+      <a class="nav-link" href="about.html">About</a>
+      <a class="nav-link" href="work.html">Work</a>
+      <a class="nav-link" href="contact.html">Contact</a>
+  </nav>
+  </div>
+
+
   <h1>Let's Get In Contact</h1>
   <div class="container">
     <div class="contact-content"> <h3>Email:</h3>
