--- a/about.html
+++ b/about.html
@@ -22,6 +22,15 @@
 </head>
 <body>
 
+  <div>
+    <nav class="nav">
+      <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+      <a class="nav-link" href="about.html">About</a>
+      <a class="nav-link" href="work.html">Work</a>
+      <a class="nav-link" href="contact.html">Contact</a>
+  </nav>
+  </div>
+
   <h1> About</h1>
   <h3>Frontend Develover from South Africa</h3>
   <div class=" about-container container">
