--- a/work.html
+++ b/work.html
@@ -21,6 +21,17 @@
   <title>work page</title>
 </head>
 <body>
+
+  <div>
+    <nav class="nav">
+      <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+      <a class="nav-link" href="about.html">About</a>
+      <a class="nav-link" href="work.html">Work</a>
+      <a class="nav-link" href="contact.html">Contact</a>
+  </nav>
+  </div>
+
+
   <h1 class="work-page-h1">Take a look at my recent projects!</h1>
 
   <div class="work-page-container container">
