Finished styling the whole project

--- a/about.html
+++ b/about.html
@@ -35,13 +35,15 @@
   <h3>Frontend Develover from South Africa</h3>
   <div class=" about-container container">
     <div class="row">
-      <div col-6>
-        <p>Coding is awesome and so is SheCodes Foundation a platform that gives you an opprtunity to learn
-          a learn skill that is in demand in the current job market. I love that it gives women an opportunity to
-          break into teach and fill the current gap. I love that it caters for women in many countries all for free</p>
+      <div class="col-6">
+        <p class="about-jabu">My name is Jabu Mhlongo and I am an Inspiring Web developer based in Gauteng, South Africa. I joined SheCodes
+          Foundation because after having graduated from university I found myself unemployed and looking to reinvert myself.
+          After my research I concluded that teach is the way to go but, I did not have the financial means to enroll in a paid course
+           and I still having outstanding fees from my previous studies.
+        </p>
       </div>
 
-      <div col-6>
+      <div class="col-6">
         <img src="images/Jabu-Mhlongo.jpg" alt="Jabu Mhlongo" class="img-fluid">
       </div>
 
